--- a/envi-api/src/main/resources/application.properties
+++ b/envi-api/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## Database
-spring.datasource.url=jdbc:${DB_DRIVER}://${DB_HOST}:${DB_PORT}/${F}
+spring.datasource.url=jdbc:${DB_DRIVER}://${DB_HOST}:${DB_PORT}/${DB_DATABASE}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
