--- a/envi/Dockerfile
+++ b/envi/Dockerfile
@@ -2,6 +2,8 @@
 FROM node:16.13.0-alpine as build
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL $REACT_APP_API_URL
 COPY package.json ./
 COPY package-lock.json ./
 RUN npm ci --silent
